--- a/index.html
+++ b/index.html
@@ -199,11 +199,20 @@
       var link = document.querySelector(".booking-search-button");
       var popup = document.querySelector(".booking-popup");
       var focus_input = popup.querySelector("[name=arrival-date]");
+      var click = 0;
 
       link.addEventListener("click", function (evt) {
         evt.preventDefault();
-        popup.classList.toggle("popup-hide");
-        focus_input.focus();
+        click++;
+        if (click % 2 === 0) {
+          popup.classList.remove("popup-hide");
+          popup.classList.add("popup-appear");
+        } else {
+          popup.classList.remove("popup-appear");
+          popup.classList.add("popup-hide");
+          focus_input.focus();
+        }
+
       });
     </script>
   </body>
