экспериментирую с z-index и анимацией формы

--- a/index.html
+++ b/index.html
@@ -119,45 +119,47 @@
 
 
         <section class="booking">
-          <!-- Лид и кнопка поиска-->
-          <h2 class="visually-hidden">Поиск жилья в Седоне</h2>
-          <p class="booking-lead">Заинтересовались?</p>
-          <p class="booking-text">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Cедоне</p>
-          <a class="booking-search-button" href="#">Поиск Гостиницы в Седоне</a>
+          <div class="booking-intro">
+            <!-- Лид и кнопка поиска-->
+            <h2 class="visually-hidden">Поиск жилья в Седоне</h2>
+            <p class="booking-lead">Заинтересовались?</p>
+            <p class="booking-text">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Cедоне</p>
+            <a class="booking-search-button" href="#">Поиск Гостиницы в Седоне</a>
+          </div>
+          <!-- Всплывающее окно: Формы для выбора параметров поездки и бронирования жилья -->
+          <div class="booking-popup">
+              <form class="booking-form" action="https://echo.htmlacademy.ru" method="POST">
+                <div>
+                  <label for="arrival-date">Дата заезда:</label>
+                  <input class="arrival-date" type="text" id="arrival-date" name="arrival-date" value="" placeholder="24 апреля 2017" required>
+                  <button class="calendar-button" type="button" aria-label="Выбор даты">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+                  </button>
+                </div>
+                <div>
+                  <label for="departure-date">Дата выезда:</label>
+                  <input class="departure-date" type="text" id="departure-date" name="departure-date" value="" placeholder="4 июля 2017" required>
+                  <button class="calendar-button" type="button" aria-label="Выбор даты">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+                  </button>
+                </div>
+                <div class="adults-box">
+                  <label for="number-of-adults">Взрослые:</label>
+                  <input class="number-of-adults" type="text" value="2" id="number-of-adults" name="number-of-adults">
+                  <button class="booking-form-rate-button plus-rate-button" type="button" aria-label="Добавить"></button>
+                  <button class="booking-form-rate-button minus-rate-button" type="button" aria-label="Уменьшить"></button>
+                </div>
+                <div class="children-box">
+                  <label for="number-of-children">Дети:</label>
+                  <input class="number-of-children" type="text" name="number-of-children" id="number-of-children" value="0">
+                  <button class="booking-form-rate-button plus-rate-button" type="button" aria-label="Добавить"></button>
+                  <button class="booking-form-rate-button minus-rate-button" type="button" aria-label="Уменьшить"></button>
+                </div>
+                <button class="popap-submit-button" type="submit">Найти</button> <!-- Возможно здесь нужно использовать ссылку -->
+              </form>
+            </div>
         </section>
 
-        <!-- Всплывающее окно: Формы для выбора параметров поездки и бронирования жилья -->
-        <div class="booking-popup popup-appear">
-            <form class="booking-form" action="https://echo.htmlacademy.ru" method="POST">
-              <div>
-                <label for="arrival-date">Дата заезда:</label>
-                <input class="arrival-date" type="text" id="arrival-date" name="arrival-date" value="" placeholder="24 апреля 2017" required>
-                <button class="calendar-button" type="button" aria-label="Выбор даты">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
-                </button>
-              </div>
-              <div>
-                <label for="departure-date">Дата выезда:</label>
-                <input class="departure-date" type="text" id="departure-date" name="departure-date" value="" placeholder="4 июля 2017" required>
-                <button class="calendar-button" type="button" aria-label="Выбор даты">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
-                </button>
-              </div>
-              <div class="adults-box">
-                <label for="number-of-adults">Взрослые:</label>
-                <input class="number-of-adults" type="text" value="2" id="number-of-adults" name="number-of-adults">
-                <button class="booking-form-rate-button plus-rate-button" type="button" aria-label="Добавить"></button>
-                <button class="booking-form-rate-button minus-rate-button" type="button" aria-label="Уменьшить"></button>
-              </div>
-              <div class="children-box">
-                <label for="number-of-children">Дети:</label>
-                <input class="number-of-children" type="text" name="number-of-children" id="number-of-children" value="0">
-                <button class="booking-form-rate-button plus-rate-button" type="button" aria-label="Добавить"></button>
-                <button class="booking-form-rate-button minus-rate-button" type="button" aria-label="Уменьшить"></button>
-              </div>
-              <button class="popap-submit-button" type="submit">Найти</button> <!-- Возможно здесь нужно использовать ссылку -->
-            </form>
-          </div>
 
         <!-- КАРТА --> <!-- Т.З. п.3.13 -->
         <section class="map">
