Добавил неразрывные пробелы в вёрстку и исправил ширину .feature-item-describtion

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="feature-item-textbox feature-item-left feature-item-blue">
                 <h3 class="feature-item-header">Настоящий городок</h3>
                 <span class="feature-item-number">№1</span>
-                <p class="feature-item-describtion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                <p class="feature-item-describtion">Седона — не аттракцион для туристов, там&#160;течёт&#160;своя&#160;жизнь</p>
               </div>
               <div class="feature-item-image">
                 <img src="img/photo-feature1.jpg" alt="Фото: городская жизнь в Седоне" width="800" height="256">
@@ -94,7 +94,7 @@
               <div class="feature-item-textbox">
                 <h3 class="feature-item-header">Небольшая площадь</h3>
                 <span class="feature-item-number">№3</span>
-                <p class="feature-item-describtion">Все достопримечательности находятся очень близко</p>
+                <p class="feature-item-describtion">Все достопримечательности находятся&#160;очень&#160;близко</p>
               </div>
             </li>
 
@@ -102,7 +102,7 @@
               <div class="feature-item-textbox">
                 <h3 class="feature-item-header">Красивая дорога</h3>
                 <span class="feature-item-number">№4</span>
-                <p class="feature-item-describtion">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <p class="feature-item-describtion">Ехать в Седону из Лас-Вегаса совсем не&#160;скучно!</p>
               </div>
             </li>
 
@@ -110,7 +110,7 @@
               <div class="feature-item-textbox">
                 <h3 class="feature-item-header">Мало туристов</h3>
                 <span class="feature-item-number">№5</span>
-                <p class="feature-item-describtion">Большинство едет в гранд каньон и толпится там</p>
+                <p class="feature-item-describtion">Большинство едет в гранд каньон и&#160;толпится там</p>
               </div>
             </li>
 
