Исправил замечания наставника

--- a/catalog.html
+++ b/catalog.html
@@ -121,7 +121,7 @@
           <ul class="hotels-list">
 
             <li>
-              <a class="hotel-image"><img src="img/AmaraResortSpa.jpg" alt="фото отеля Amara Resort & Spa" width="135" height="90"></a>
+              <a class="hotel-image"><img src="img/amara-resort-spa.jpg" alt="фото отеля Amara Resort & Spa" width="135" height="90"></a>
               <div class="hotel-box">
                 <a class="hotel-name" href="#"><h3>Amara Resort & Spa</h3></a>
                 <div class="hotel-box-info">
@@ -142,7 +142,7 @@
             </li>
 
             <li>
-              <a class="hotel-image"><img src="img/DesertQuailInn.jpg" alt="фото отеля Desert Quail Inn" width="135" height="90"></a>
+              <a class="hotel-image"><img src="img/desert-quailinn.jpg" alt="фото отеля Desert Quail Inn" width="135" height="90"></a>
               <div class="hotel-box">
                 <a class="hotel-name" href="#"><h3>Desert Quail Inn</h3></a>
                 <div class="hotel-box-info">
@@ -163,7 +163,7 @@
             </li>
 
             <li>
-              <a class="hotel-image"><img src="img/VillasatPocoDiablo.jpg" alt="фото отеля Villas at Poco Diablo" width="135" height="90"></a>
+              <a class="hotel-image"><img src="img/villasat-poco-diablo.jpg" alt="фото отеля Villas at Poco Diablo" width="135" height="90"></a>
               <div class="hotel-box">
                 <a class="hotel-name" href="#"><h3>Villas at Poco Diablo</h3></a>
                 <div class="hotel-box-info">
