--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@
         <section class="booking">
           <div class="booking-intro">
             <!-- Лид и кнопка поиска-->
-            <h2 class="visually-hidden">Поиск жилья в Седоне</h2>
-            <p class="booking-lead">Заинтересовались?</p>
-            <p class="booking-text">Укажите предполагаемые даты поездки, и&#160;мы&#160;покажем&#160;вам&#160;лучшие&#160;предложения&#160;гостиниц&#160;в&#160;Cедоне</p>
+            <div>
+              <h2 class="visually-hidden">Поиск жилья в Седоне</h2>
+              <p class="booking-lead">Заинтересовались?</p>
+              <p class="booking-text">Укажите предполагаемые даты поездки, и&#160;мы&#160;покажем&#160;вам&#160;лучшие&#160;предложения&#160;гостиниц&#160;в&#160;Cедоне</p>
+            </div>
             <a class="booking-search-button" href="#">Поиск Гостиницы в Седоне</a>
           </div>
           <!-- Всплывающее окно: Формы для выбора параметров поездки и бронирования жилья -->
@@ -197,6 +199,6 @@
         </div>
       </footer>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
