заменил неразр.пробелы на <br>

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div>
               <h2 class="visually-hidden">Поиск жилья в Седоне</h2>
               <p class="booking-lead">Заинтересовались?</p>
-              <p class="booking-text">Укажите предполагаемые даты поездки, и&#160;мы&#160;покажем&#160;вам&#160;лучшие&#160;предложения&#160;гостиниц&#160;в&#160;Cедоне</p>
+              <p class="booking-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Cедоне</p>
             </div>
             <a class="booking-search-button" href="#">Поиск Гостиницы в Седоне</a>
           </div>
