--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,6 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
   </head>
-
   <body class="catalog-page">
     <div class="container">
 
@@ -92,8 +91,7 @@
         <!-- Результаты поиска -->
         <section class="search-results">
           <h2 class="visually-hidden">Результаты поиска:</h2>
-
-          <!-- Найдено: n штук - Блок для показа результатов поиска и сортировки -->
+          <!-- Блок для показа результатов поиска и сортировки -->
           <div class="sorting">
             <p class="quantity">Найдено:<span> 3</span></p>
             <p>Сортировка:</p>
@@ -117,7 +115,7 @@
             </ul>
           </div>
 
-          <!-- ВЫДАЧА РЕЗУЛЬТАТОВ ПОИСКА -->
+          <!-- ВЫДАЧА РЕЗУЛЬТАТОВ ПОИСКА (Список подходящих отелей) -->
           <ul class="hotels-list">
 
             <li>
@@ -182,6 +180,7 @@
                 </p>
               </div>
             </li>
+
           </ul>
         </section>
       </main>
@@ -190,7 +189,6 @@
       <footer class="site-footer">
         <p class="hashtag">#VISITSEDONA</p>
         <ul class="social-links">
-          <!-- Иконки фоновые => в CSS -->
           <li class="social-button">
             <a class="twitter social-link" href="#"><span class="visually-hidden social-link">Твитер</span></a>
           </li>
