--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="container">
+
       <!-- HEADER -->
       <header class="main-header">
         <nav class="site-menu">
@@ -24,12 +25,11 @@
         </nav>
       </header>
 
-      <!-- MAIN -->
       <main class="main-container">
+
         <!-- INTRO -->
         <section class="intro">
           <div class="intro-banner">
-            <!-- Фон с горами в CSS -->
             <img class="intro-logo" src="img/svg/intro-welcome.svg" alt="Баннер с текстом Welcome to Sedona" width="459" height="353">
           </div>
           <div class="intro-text">
@@ -38,8 +38,7 @@
           </div>
         </section>
 
-        <!-- Блок: Список преимуществ  -->
-
+        <!-- Основной список преимуществ  -->
         <section class="features">
           <h2 class="visually-hidden">Преимущества Седоны</h2>
           <ol class="features-main-list">
@@ -52,11 +51,8 @@
               <div class="feature-item-image">
                 <img src="img/photo-feature1.jpg" alt="Фото: городская жизнь в Седоне" width="800" height="256">
               </div>
-
               <!--Список с "дополнительными бонусами" -->
-
               <ul class="features-extra-list">
-                <!-- иконки фоновые, т.е. делаются в CSS -->
                 <li class="features-extra-list-item house">
                   <div class="features-extra-list-textbox">
                     <h4>Жильё</h4>
@@ -77,7 +73,6 @@
                 </li>
               </ul>
             </li>
-
             <!-- Продолжение основного списка преимуществ -->
             <li class="feature-item bridge-item">
               <div class="feature-item-image">
@@ -89,7 +84,6 @@
                 <p class="feature-item-describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
             </li>
-
             <li class="feature-item square-item feature-item-grey">
               <div class="feature-item-textbox">
                 <h3 class="feature-item-header">Небольшая площадь</h3>
@@ -97,7 +91,6 @@
                 <p class="feature-item-describtion">Все достопримечательности находятся&#160;очень&#160;близко</p>
               </div>
             </li>
-
             <li class="feature-item road-item feature-item-grey">
               <div class="feature-item-textbox">
                 <h3 class="feature-item-header">Красивая дорога</h3>
@@ -105,7 +98,6 @@
                 <p class="feature-item-describtion">Ехать в Седону из Лас-Вегаса совсем не&#160;скучно!</p>
               </div>
             </li>
-
             <li class="feature-item tourists-item feature-item-grey">
               <div class="feature-item-textbox">
                 <h3 class="feature-item-header">Мало туристов</h3>
@@ -113,11 +105,10 @@
                 <p class="feature-item-describtion">Большинство едет в гранд каньон и&#160;толпится там</p>
               </div>
             </li>
-
           </ol>
         </section>
 
-
+        <!-- BOOKING -->
         <section class="booking">
           <div class="booking-intro">
             <!-- Лид и кнопка поиска-->
@@ -162,22 +153,18 @@
             </div>
         </section>
 
-
         <!-- КАРТА --> <!-- Т.З. п.3.13 -->
         <section class="map">
           <h2 class="visually-hidden">Карта с описанием местоположения Седоны</h2>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d352393.3701192456!2d-111.79606593248471!3d34.85643798074325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1550926843751" width="1200" height="593" style="border:0" allowfullscreen></iframe>
           <img src="img/map.png" alt="Карта: расположение города Седона в штате Аризона" width="1200" height="593">
         </section>
-
       </main>
 
       <!-- Футер -->
-
       <footer class="site-footer">
         <p class="hashtag">#VISITSEDONA</p>
         <ul class="social-links">
-          <!-- Иконки фоновые => в CSS -->
           <li class="social-button">
             <a class="twitter social-link" href="#"><span class="visually-hidden social-link">Твитер</span></a>
           </li>
@@ -199,6 +186,9 @@
         </div>
       </footer>
     </div>
+
+    <!-- скрипт на открытие popup -->
     <script src="js/script.min.js"></script>
+
   </body>
 </html>
